# NVP_Back

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  back.py  cloudinari.py  database.sql  database_class.py  docker-compose.yml  fotografia.py  model.py  model_tf.py  predict.py  pyproject.toml
