[project]
name = "nvp-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "google-api-python-client>=2.187.0",
    "mysql-connector-python>=9.5.0",
    "opencv-python>=4.12.0.88",
    "tensorflow>=2.20.0",
]
